# dbt_playground

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
dbt_prj/: .sqlfluff  .sqlfluffignore  dbt_project.yml  package-lock.yml  packages.yml  profiles.yaml
dbt_prj/macros/: generate_alias_name.sql
dbt_prj/models/raw/: all_countries_raw_data.sql  country_raw_data.sql  single_country_raw_data.sql  sources.yaml
dbt_prj/models/staging/: stg_lambda_transf.sql  stg_transf_step_2.sql
dbt_prj/models/transform/: agg_info.sql
dbt_prj/seeds/: marital_status.csv
dbt_warehouse/: dbt_project.yml
macros/: generate_alias_name.sql  generate_schema_name.sql
