[project]
name = "dbt-playground"
version = "0.1.0"
description = "DBT Playground project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-bigquery>=1.9.1",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "sqlfluff>=3.4.0",
    "yamllint>=1.37.1",
]
